# connectED

./: .tm_project2.cache  AUTHORS  ChangeLog  GTK-PHP-IDE.applications  GTK-PHP-IDE.desktop  GTK-PHP-IDE.spec  GTK-PHP-IDE.spec.in  INSTALL  Makefile  Makefile.am  Makefile.in  README  README-64bit  TODO  aclocal.m4  config.h  config.h.in  config.status  configure  configure.in  connectED.applications  connectED.desktop  connected_tweets.glade.bak  connected_tweets.gladep  create_php-manual_symlink.tcsh  fix_comments.tcsh  intltool-update  intltool-update.in  libtool  mk-tarball.tcsh  php.manual.find.sh  refactor:find_old_names.sh  sudo_fix.sh  vim.session.tcsh
.anjuta/session/: anjuta.session
data/: Makefile  Makefile.am  Makefile.in  php-function-reference.api  php-gphpedit.api
doc/: Makefile  Makefile.in
pixmaps/: Makefile  Makefile.am  Makefile.in
po/: GTK-PHP-IDE.pot  Makefile  Makefile.in  POTFILES  POTFILES.in  connectED.pot
share/: Makefile.am  Makefile.in  connectED.desktop.in  php-function-reference.api
src/: .Makefile.am.swp  .Makefile.in.swp  .Makefile.swp  .main_window_callbacks.c.swp  GTK-PHP-IDE  GTK-PHP-IDE_ipc.c  Makefile  Makefile.am  Makefile.in  calltip.c  calltip.h  classbrowser.c  classbrowser.h  classbrowser_parse.c  classbrowser_parse.h  comments.c  comments.h  connectED  connectED_ipc.c  connectED_ipc.h  edit_template.c  edit_template.h  find_replace.c  find_replace.h  grel2abs.c  gtk_php_ide_ipc.c  gtk_php_ide_ipc.h  ipc.c  ipc.h  main.c  main.h  main_window.c  main_window.h  main_window.typedef.h  main_window_callbacks.c  main_window_callbacks.h  main_window_menu.h  plugin.c  plugin.h  preferences.c  (+26 more)
src/.deps/: GTK-PHP-IDE_ipc.Po  calltip.Po  classbrowser.Po  classbrowser_parse.Po  connectED_ipc.Po  edit_template.Po  find_replace.Po  grel2abs.Po  gtk_php_ide_ipc.Po  main.Po  main_window.Po  main_window_callbacks.Po  plugin.Po  preferences.Po  preferences_dialog.Po  syntax_check.Po  tab.Po  tab_css.Po  tab_cxx.Po  tab_perl.Po  tab_php.Po  tab_python.Po  tab_sql.Po  tab_util.Po  templates.Po
src/gtkscintilla2/: Makefile  libgtkscintilla2.so.0.1.0
src/gtkscintilla2/scintilla/gtk/: Makefile
src/gtkscintilla2/scintilla/src/: Document.cxx
